--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Henry Daniel\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=C:/Users/Henry Daniel/Documents/apache-tomcat-8.5.40-windows-x64/apache-tomcat-8.5.40
-j2ee.server.instance=tomcat80:home=C:\\Users\\Henry Daniel\\Documents\\apache-tomcat-8.5.40-windows-x64\\apache-tomcat-8.5.40
-user.properties.file=C:\\Users\\Henry Daniel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\henry\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+j2ee.server.domain=C:/Users/henry/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\henry\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
